--- a/index.html
+++ b/index.html
@@ -537,6 +537,23 @@
             </p>
           </div>
         </div>
+        <!-- Project 8 -->
+        <div class="project-card">
+          <img
+            src="./assets/caas.png"
+            alt="Serverless File System"
+            class="project-img"
+          />
+          <div class="project-content">
+            <h2 class="project-title">Serverless File System</h2>
+            <p>
+              Enhanced the Serverless File System (SLFS), a distributed file system leveraging serverless computing for elastic 
+              scalability and cost-effectiveness. Automated SLFS recovery by enhancing C++ logic, and integrating Zookeeper for health tracking and failover, 
+              and conducting extensive testing with five coordinators. SLFS effectively addresses the cold start problem, improving performance, 
+              resource utilization, and reducing costs compared to traditional cloud file services.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
