--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <!-- Project 5 -->
         <div class="project-card">
           <img
-            src="./assets/db.png"
+            src="./assets/music.png"
             alt="Lyric Shuffle"
             class="project-img"
           />
@@ -441,7 +441,7 @@
         <!-- Project 6 -->
         <div class="project-card">
           <img
-            src="./assets/lb.png"
+            src="./assets/so.png"
             alt="Fake Stack Overflow"
             class="project-img"
           />
@@ -457,7 +457,7 @@
         <!-- Project 7 -->
         <div class="project-card">
           <img
-            src="./assets/caas.png"
+            src="./assets/sms.png"
             alt="SMS Offer Notifications for Buyers & Sellers"
             class="project-img"
           />
@@ -473,7 +473,7 @@
         <!-- Project 8 -->
         <div class="project-card">
           <img
-            src="./assets/caas.png"
+            src="./assets/slfs.png"
             alt="Serverless File System"
             class="project-img"
           />
