--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="about-text">
           <p>
             Hi there! 👋 I'm a software engineer with 5+ years of experience
-            building innovative solutions in cloud and tech. <br />With a Bachelor's and Master’s in Computer Science, I’m passionate about learning, 
+            building innovative solutions in cloud and tech. With a Bachelor's and Master’s in Computer Science, I’m passionate about learning, 
             growing, and staying ahead of the curve in this ever-evolving field. 
             Let’s create something awesome together! 🚀✨
           </p>
